--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,10 @@
   "author": "Dawid Loranc",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.19.0"
+    "apollo-server": "^2.22.1",
+    "graphql": "^15.5.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
